--- a/VictoriaGotti02/Venetian.html
+++ b/VictoriaGotti02/Venetian.html
@@ -2161,11 +2161,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 126px; height: 43px;
-        -ms-transform: translate(0, 0) translate(187px, 433px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(187px, 433px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(187px, 433px) rotate(0deg);
-        transform: translate(0, 0) translate(187px, 433px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 44px; height: 45px;
+        -ms-transform: translate(0, 0) translate(273px, 433px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(273px, 433px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(273px, 433px) rotate(0deg);
+        transform: translate(0, 0) translate(273px, 433px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2228,75 +2228,66 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 216px; height: 58px;
-        -ms-transform: translate(0, 0) translate(53px, 305px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(53px, 305px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(53px, 305px) rotate(0deg);
-        transform: translate(0, 0) translate(53px, 305px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 188px; height: 51px;
+        -ms-transform: translate(0, 0) translate(64px, 295px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(64px, 295px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(64px, 295px) rotate(0deg);
+        transform: translate(0, 0) translate(64px, 295px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 261px; height: 85px;
-        -ms-transform: translate(0, 0) translate(34px, 255px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(34px, 255px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(34px, 255px) rotate(0deg);
-        transform: translate(0, 0) translate(34px, 255px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 310px; height: 36px;
+        -ms-transform: translate(0, 0) translate(7px, 341px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(7px, 341px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(7px, 341px) rotate(0deg);
+        transform: translate(0, 0) translate(7px, 341px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 309px; height: 50px;
-        -ms-transform: translate(0, 0) translate(11px, 299px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 299px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 299px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 299px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 87px;
+        -ms-transform: translate(0, 0) translate(14px, 379px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(14px, 379px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(14px, 379px) rotate(0deg);
+        transform: translate(0, 0) translate(14px, 379px) rotate(0deg);
 }
 /*#/#*//*#i79.shape.css:shape/base/css*/
 #i79 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i79.i80.positioning.css:positioning/base/css.2*/
 #i79 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 99.79166666666667%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i89.image.css:image/base/css*/
 #i89 { opacity: 1; }
 /*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
-#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 31px; height: 32px;
-        -ms-transform: translate(0, 0) translate(5px, 443px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(5px, 443px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(5px, 443px) rotate(0deg);
-        transform: translate(0, 0) translate(5px, 443px) rotate(0deg);
+#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 26px; height: 26px;
+        -ms-transform: translate(0, 0) translate(7px, 450px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(7px, 450px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(7px, 450px) rotate(0deg);
+        transform: translate(0, 0) translate(7px, 450px) rotate(0deg);
 }
 /*#/#*//*#i91.image.css:image/base/css*/
 #i91 { opacity: 1; }
 /*#/#*//*#i91.i92.positioning.css:positioning/base/css.2*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 31px; height: 32px;
-        -ms-transform: translate(0, 0) translate(38px, 443px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(38px, 443px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(38px, 443px) rotate(0deg);
-        transform: translate(0, 0) translate(38px, 443px) rotate(0deg);
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 26px; height: 26px;
+        -ms-transform: translate(0, 0) translate(38px, 449px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(38px, 449px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(38px, 449px) rotate(0deg);
+        transform: translate(0, 0) translate(38px, 449px) rotate(0deg);
 }
 /*#/#*//*#i93.image.css:image/base/css*/
 #i93 { opacity: 1; }
 /*#/#*//*#i93.i94.positioning.css:positioning/base/css.2*/
-#i93 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 31px; height: 32px;
-        -ms-transform: translate(0, 0) translate(71px, 443px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(71px, 443px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(71px, 443px) rotate(0deg);
-        transform: translate(0, 0) translate(71px, 443px) rotate(0deg);
-}
-/*#/#*//*#i103.image.css:image/base/css*/
-#i103 { opacity: 1; }
-/*#/#*//*#i103.i104.positioning.css:positioning/base/css.2*/
-#i103 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 270px; height: 79px;
-        -ms-transform: translate(0, 0) translate(26px, 361px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(26px, 361px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(26px, 361px) rotate(0deg);
-        transform: translate(0, 0) translate(26px, 361px) rotate(0deg);
+#i93 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 27px; height: 27px;
+        -ms-transform: translate(0, 0) translate(70px, 449px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(70px, 449px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(70px, 449px) rotate(0deg);
+        transform: translate(0, 0) translate(70px, 449px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2309,31 +2300,30 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/XPicRNb.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/w2b1GfB.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/6xvdDEz.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/q8nJvLG.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/VqpnDqe.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/MQaj4fL.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/RgCh5km.png"/>
+<img id="i16" src="https://i.imgur.com/Q7x8xSr.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/e2ZXYND.png"/>
+<img id="i46" src="https://i.imgur.com/4pemBrN.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63"></div>
+<div id="i63">Victoria Gotti:
+La hija de mi padre, estreno exclusivo.</div>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68"></div>
+<div id="i68">Producida por la propia Victoria Gotti, la película nos lleva al mundo de cómo era realmente crecer como la hija del jefe de la mafia John Gotti, revelando el glamour, el brillo y las dificultades únicas de su mundo. Sábado 15 de junio.</div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
 <div id="i79"></div>
 <!--#/#--><!--#i89.image.html:image/html-->
-<img id="i89" src="https://i.imgur.com/Op9g79c.png"/>
+<img id="i89" src="https://i.imgur.com/WV1DSVZ.png"/>
 <!--#/#--><!--#i91.image.html:image/html-->
-<img id="i91" src="https://i.imgur.com/ln9omrS.png"/>
+<img id="i91" src="https://i.imgur.com/n0J7vCp.png"/>
 <!--#/#--><!--#i93.image.html:image/html-->
-<img id="i93" src="https://i.imgur.com/R36K7AR.png"/>
-<!--#/#--><!--#i103.image.html:image/html-->
-<img id="i103" src="https://i.imgur.com/H3vmvFZ.jpg"/>
+<img id="i93" src="https://i.imgur.com/uabhexm.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2357,7 +2347,7 @@ document.addEventListener('DOMContentLoaded', function() {
         autoRotationEnabled: 'true',
         autoRotationDelay: '3',
         autoRotationTimeout: '25',
-        shadow: 'rgba(255,168,168,1)',
+        shadow: 'rgba(255,51,75,1)',
         perspective: '500',
         useSinglePerspective: 'false',
         useOffsetCompensation: 'true',
@@ -2406,7 +2396,7 @@ var el = document.getElementById('i79');
 
 el.addEventListener('click', function(e){
     /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://tienda.tena.com.mx/mujeres'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.lifetimeplay.tv/mx/lifetime-movies'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2423,7 +2413,7 @@ var el = document.getElementById('i89');
 
 el.addEventListener('click', function(e){
     /*#i99.i100.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://tienda.tena.com.mx/mujeres'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.lifetimeplay.tv/mx/lifetime-movies'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2440,7 +2430,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i97.i98.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://tienda.tena.com.mx/mujeres'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.lifetimeplay.tv/mx/lifetime-movies'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2457,17 +2447,13 @@ var el = document.getElementById('i93');
 
 el.addEventListener('click', function(e){
     /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://tienda.tena.com.mx/mujeres'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.lifetimeplay.tv/mx/lifetime-movies'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i103.image.js:image/base/js*/
-
-/*#/#*//*#i103.i104.positioning.js:positioning/base/js.2*/
-bmShow('i103');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2494,11 +2480,11 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: XPicRNb.jpg; fileId: ; sourceTypeId: externalUrl;
+name: w2b1GfB.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: 6xvdDEz.jpg; fileId: ; sourceTypeId: externalUrl;
+name: q8nJvLG.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: VqpnDqe.jpg; fileId: ; sourceTypeId: externalUrl;
+name: MQaj4fL.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
@@ -2512,11 +2498,11 @@ customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: ; customName: false;
+name: Victoria Gotti: La hija de mi padre, estreno exclusivo.; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: ; customName: false;
+name: Producida por la propia Victoria Gotti, la película nos lleva al mundo de cómo era realmente crecer como la hija del jefe de la mafia John Gotti, revelando el glamour, el brillo y las dificultades únicas de su mundo. sábado 15 de junio.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i79.shape.meta:shape/meta*/
@@ -2537,10 +2523,5 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i93.i94.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i103.image.meta:image/meta*/
-name: TITULO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i103.i104.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
