--- a/VictoriaGotti02/Venetian.html
+++ b/VictoriaGotti02/Venetian.html
@@ -2315,7 +2315,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i63">Victoria Gotti:
 La hija de mi padre, estreno exclusivo.</div>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Producida por la propia Victoria Gotti, la película nos lleva al mundo de cómo era realmente crecer como la hija del jefe de la mafia John Gotti, revelando el glamour, el brillo y las dificultades únicas de su mundo. Sábado 15 de junio.</div>
+<div id="i68">Producida por la propia Victoria Gotti, la película nos lleva al mundo de cómo era realmente crecer como la hija del jefe de la mafia John Gotti, revelando el glamour, el brillo y las dificultades únicas de su mundo. sábado 15 de junio.</div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
 <div id="i79"></div>
 <!--#/#--><!--#i89.image.html:image/html-->
@@ -2430,7 +2430,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i97.i98.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.lifetimeplay.tv/mx/lifetime-movies'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
