--- a/VictoriaGotti02/Venetian.html
+++ b/VictoriaGotti02/Venetian.html
@@ -2430,7 +2430,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i97.i98.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.lifetimeplay.tv/mx/lifetime-movies'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
