--- a/VictoriaGotti02/Fade300x250.html
+++ b/VictoriaGotti02/Fade300x250.html
@@ -66,15 +66,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/hLdaJ1Q.jpg)
+            background-image: url(https://i.imgur.com/sd0DdJU.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/EpKl3r0.jpg)
+            background-image: url(https://i.imgur.com/EVTwbwf.jpg)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/JL0aAB6.jpg)
+            background-image: url(https://i.imgur.com/t8eP8Fl.jpg)
 
         }
 
