--- a/VictoriaGotti02/Venetian.html
+++ b/VictoriaGotti02/Venetian.html
@@ -2300,11 +2300,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/w2b1GfB.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/stFjMWb.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/q8nJvLG.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/1WeIxiD.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/MQaj4fL.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/qntdMgF.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2480,11 +2480,11 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: w2b1GfB.jpg; fileId: ; sourceTypeId: externalUrl;
+name: stFjMWb.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: q8nJvLG.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 1WeIxiD.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: MQaj4fL.jpg; fileId: ; sourceTypeId: externalUrl;
+name: qntdMgF.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
