--- a/VictoriaGotti02/ZoomExp300x600.html
+++ b/VictoriaGotti02/ZoomExp300x600.html
@@ -177,7 +177,7 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/fgx6TEe.jpg">
+      <img src="https://i.imgur.com/2fAaNtw.jpg">
       
     <li>
       <img src="https://i.imgur.com/jDAl8jg.jpg">
