--- a/ConfortAuto Portugués/Fijo300x250.html
+++ b/ConfortAuto Portugués/Fijo300x250.html
@@ -222,10 +222,10 @@
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:70%; color: white;"></span></div>
                
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/pfDiHKe.png" alt="" /> 
+                <img src="https://i.imgur.com/CkQBEOR.png" alt="" /> 
                  </div>
                 <div class="te-cover"> 
-                    <img src="https://i.imgur.com/pfDiHKe.png" alt="" /> 
+                    <img src="https://i.imgur.com/CkQBEOR.png" alt="" /> 
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
@@ -240,7 +240,7 @@
                             <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:18px; text-align: center;">
                        A melhor escolha de pneus<br> 
                         </span> 
-                         <span class="bzm_text_medium bzm_text_bold" style="color:#000; font-size:14px; text-align: justify;">
+                         <span class="bzm_text_medium bzm_text_bold" style="color:#000; font-size:12px; text-align: justify;">
                         Goodyear é a melhor escolha para o seu veículo e pode encontrar os pneus na Confortauto. 
 
                         </span> </div>
