--- a/ConfortAuto Portugués/Venetian300x600.html
+++ b/ConfortAuto Portugués/Venetian300x600.html
@@ -2231,10 +2231,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
 #i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 299px; height: 410px;
-        -ms-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i26.button.css:button/base/css*/
 #i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(145,145,145,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -2256,14 +2256,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/bPDeuYO.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Goodyear es la mejor elección para tu coche y la puedes encontrar en Confortauto. Elige lo mejor con la profesionalidad de los talleres Confortauto.</div>
+<div id="i7">Goodyear é a melhor escolha para o seu veículo e pode encontrar os pneus na Confortauto. Escolha o melhor com o profissionalismo dos centros Confortauto.</div>
 <!--#/#--><!--#i32.text.html:text/html-->
-<div id="i32">La mejor elección 
-de neumáticos</div>
+<div id="i32">A melhor escolha de pneus</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/nE7Kz7B.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/Kmfeiid.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/ludk6mr.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
@@ -2282,6 +2281,8 @@ bmShow('i30');
 bmShow('i16');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
+/*#/#*//*#i32.i33.positioning.js:positioning/base/js.2*/
+bmShow('i32');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2334,15 +2335,13 @@ var el = document.getElementById('i26');
 
 el.addEventListener('click', function(e){
     /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.confortauto.com/neumaticos-coche/goodyear'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.confortauto.pt/pneus-turismo/goodyear'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i32.i33.positioning.js:positioning/base/js.2*/
-bmShow('i32');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2366,18 +2365,18 @@ customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Goodyear es la mejor elección para tu coche y la puedes encontrar en Confortauto. Elige lo mejor con la profesionalidad de los talleres Confortauto.; customName: false;
+name: Goodyear é a melhor escolha para o seu veículo e pode encontrar os pneus na Confortauto. Escolha o melhor com o profissionalismo dos centros Confortauto.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i32.text.meta:text/meta*/
-name: La mejor elección  de neumáticos; customName: false;
+name: A melhor escolha de pneus; customName: false;
 /*#/#*//*#i32.i33.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: nE7Kz7B.png; fileId: ; sourceTypeId: externalUrl;
+name: Kmfeiid.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: ludk6mr.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
