--- a/ConforAuto/Fijo300x600.html
+++ b/ConforAuto/Fijo300x600.html
@@ -42,7 +42,7 @@
             margin-left: 80px;
            
             background-color: #;
-            font-family: 'Lato', sans-serif;
+            font-family:  Trebuchet MS;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -56,7 +56,7 @@
             margin-left: 10px;
             text-align: center;
             width: 89%;
-            font-family: Source Sans Pro
+            font-family: Trebuchet MS;
         }
 
         .cerveza2 .bzm_text_bold,
@@ -241,10 +241,10 @@
                 </div>
                 <div style="padding-left: 5px;padding-top:-7px;padding-right:5px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:25px; text-align: center; margin-left:-9px; margin-right:10px;">
+                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:25px; text-align: center; margin-left:0px; margin-right:0px;">
 						La mejor elección de neumáticos
 						</span> <br>
-                        <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:20px; width:95%; text-align:justify;">
+                        <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:18px; width:95%; text-align:justify;">
                         <p style="margin-top: 5px; line-height: 1.1em; margin-left: 3px; ">
                            Elige lo mejor con la profesionalidad de los talleres <b>Confortauto.</b> </p>
  
