--- a/VictoriaGotti02/Fade300x250.html
+++ b/VictoriaGotti02/Fade300x250.html
@@ -293,7 +293,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title"><b>Victoria Gotti: La hija de mi padre.</b><br>Estreno exclusivo, sábado 15 de junio.</br></span>
+            <div class="bzm_text"> <span class="bzm_text_title"><b>Victoria Gotti: La Hija de la Mafia.</b><br>Estreno exclusivo, sábado 15 de junio.</br></span>
                </div>
 
                 <div class="cta" > <img src="" style="height: 45px;"></div>
