--- a/VictoriaGotti02/Venetian.html
+++ b/VictoriaGotti02/Venetian.html
@@ -2244,9 +2244,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(7px, 341px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 87px;
+#i68 { position: absolute; top: -0.7%; left: 0%; overflow: hidden; width: 291px; height: 87px;
         -ms-transform: translate(0, 0) translate(14px, 379px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(14px, 379px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(14px, 379px) rotate(0deg);
@@ -2313,9 +2313,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i46" src="https://i.imgur.com/4pemBrN.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">Victoria Gotti:
-La hija de mi padre, estreno exclusivo.</div>
+La Hija de la Mafia. Estreno exclusivo.</div>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Producida por la propia Victoria Gotti, la película nos lleva al mundo de cómo era realmente crecer como la hija del jefe de la mafia John Gotti, revelando el glamour, el brillo y las dificultades únicas de su mundo. sábado 15 de junio.</div>
+<div id="i68">Producida por la propia Victoria Gotti, esta Lifetime Movie nos lleva al mundo de cómo era realmente crecer como la hija del gran jefe de la mafia John Gotti, revelando el glamour, el brillo y las dificultades únicas de ese mundo. Sábado 15 de Junio, 10PM.</div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
 <div id="i79"></div>
 <!--#/#--><!--#i89.image.html:image/html-->
