--- a/BCP2/300x250/02CtaIlimitadaCajerosVenetian300x250.html
+++ b/BCP2/300x250/02CtaIlimitadaCajerosVenetian300x250.html
@@ -2136,11 +2136,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.text.css:text/base/css*/
 #i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 276px; height: 41px;
-        -ms-transform: translate(0, 0) translate(12px, 173px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(12px, 173px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(12px, 173px) rotate(0deg);
-        transform: translate(0, 0) translate(12px, 173px) rotate(0deg);
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 257px; height: 41px;
+        -ms-transform: translate(0, 0) translate(19px, 170px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(19px, 170px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(19px, 170px) rotate(0deg);
+        transform: translate(0, 0) translate(19px, 170px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2166,13 +2166,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(216px, 208px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(216px, 208px) rotate(0deg);
         transform: translate(0, 0) translate(216px, 208px) rotate(0deg);
-}
-/*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
-#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 272px; height: 51px;
-        -ms-transform: translate(0, 0) translate(425px, 490px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(425px, 490px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(425px, 490px) rotate(0deg);
-        transform: translate(0, 0) translate(425px, 490px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2234,8 +2227,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
-/*#/#*//*#i52.text.css:text/base/css*/
-#i52 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i26.button.css:button/base/css*/
 #i26 { position: absolute; cursor: pointer; opacity: 0.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(255,255,255,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i26:hover { opacity: 1; background-color: rgba(0,90,140,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(46,46,46,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -2254,7 +2245,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">Realiza todas las operaciones que quieras.</div>
+<div id="i50">¡En el BCP renovamos nuestras cuentas!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2271,8 +2262,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/eNjSqOO.png"/>
-<!--#/#--><!--#i52.text.html:text/html-->
-<div id="i52">Aquí te contamos cómo. Leer más...</div>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
@@ -2333,8 +2322,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
 bmShow('i16');
-/*#/#*//*#i52.i53.positioning.js:positioning/base/js.2*/
-bmShow('i52');
 /*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
 bmShow('i26');
 /*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
@@ -2368,7 +2355,7 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i50.text.meta:text/meta*/
-name: Realiza todas las operaciones que quieras.; customName: false;
+name: ¡En el BCP renovamos nuestras cuentas!; customName: false;
 /*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
@@ -2394,10 +2381,6 @@ name: eNjSqOO.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i52.text.meta:text/meta*/
-name: Aquí te contamos cómo. Leer más...; customName: false;
-/*#/#*//*#i52.i53.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i26.button.meta:button/meta*/
 name: ;
 customName: false;
